# encode-uvicorn

./: .gitignore  404.html  CITATION.cff  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  wrangler.toml
.github/workflows/: benchmark.yml  main.yml  publish.yml  test-suite.yml  zizmor.yml
deployment/: index.html
docs/: contributing.md  index.md  installation.md  release-notes.md  server-behavior.md  settings.md
docs/concepts/: event-loop.md  logging.md
docs/css/: extra.css
docs/deployment/: index.md
docs/overrides/: main.html
docs/overrides/partials/: nav.html
scripts/: build  check  coverage  docs  lint  publish  sync-version  test
search/: search_index.json
server-behavior/: index.html
settings/: index.html
tests/: conftest.py  test_auto_detection.py  test_cli.py  test_compat.py  test_config.py  test_main.py  test_server.py  test_ssl.py  utils.py
tests/benchmarks/: http.py  test_http.py  test_ws.py  ws.py
tests/middleware/: test_logging.py  test_message_logger.py  test_proxy_headers.py  test_wsgi.py
tests/protocols/: test_http.py  test_utils.py  test_websocket.py
tests/supervisors/: test_multiprocess.py  test_reload.py  test_signal.py
uvicorn/: __init__.py  config.py  main.py  server.py
uvicorn/protocols/http/: h11_impl.py  httptools_impl.py
uvicorn/protocols/websockets/: websockets_impl.py  websockets_sansio_impl.py  wsproto_impl.py
uvicorn/supervisors/: multiprocess.py
